Allow to use other fonts that fontawesome

--- a/templates/bert-alert.html
+++ b/templates/bert-alert.html
@@ -2,7 +2,7 @@
   <div class="bert-alert {{alert.style}} {{alert.type}} clearfix">
     <div class="bert-container">
       <div class="bert-gem">
-        <i class="fa {{alert.icon}}"></i>
+        <i class="{{alert.icon}}"></i>
       </div>
       <div class="bert-content">
         {{#if alert.title}}<h5>{{alert.title}}</h5>{{/if}}
