--- a/stylesheets/bert.scss
+++ b/stylesheets/bert.scss
@@ -89,18 +89,22 @@ $transition: cubic-bezier( 0.500, -0, 0.275, 1.110);
 
 .bert-alert.success {
     background: $green;
+    border-color: lighten($green, 20%);
 }
 
 .bert-alert.info {
     background: $blue;
+    border-color: lighten($blue, 20%);
 }
 
 .bert-alert.warning {
     background: $yellow;
+    border-color: lighten($yellow, 20%);
 }
 
 .bert-alert.danger {
     background: $red;
+    border-color: lighten($red, 20%);
 }
 
 .bert-alert.fixed-top,
@@ -127,6 +131,83 @@ $transition: cubic-bezier( 0.500, -0, 0.275, 1.110);
         padding-bottom: 20px;
         bottom: -6px;
     }
+}
+
+.bert-alert[class*="lined-"] {
+    z-index: 9999;
+    border-radius: 0;
+    max-width: 350px;
+    left: 50%;
+    bottom: 100%;
+    font-size: 20px;
+    line-height: 1.4;
+    text-align: center;
+    font-weight: 400;
+    color: #666666;
+    opacity: 0;
+    cursor: default;
+    pointer-events: none;
+    -webkit-font-smoothing: antialiased;
+    -webkit-transition: opacity 0.3s 0.3s;
+    transition: opacity 0.3s 0.3s;
+    overflow: hidden;
+    border-bottom: 10px solid;
+    -webkit-transform: scale3d(0, 1, 1);
+    transform: scale3d(0, 1, 1);
+    -webkit-transition: -webkit-transform 0.3s 0.3s;
+    transition: transform 0.3s 0.3s;
+    padding:0;
+    &.animate {
+        opacity: 1;
+        pointer-events: auto;
+        -webkit-transition-delay: 0s;
+        transition-delay: 0s;
+        -webkit-transform: scale3d(1, 1, 1);
+        transform: scale3d(1, 1, 1);
+        .bert-container {
+            -webkit-transition-delay: 0.3s;
+            transition-delay: 0.3s;
+            -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+        }
+    }
+    .bert-container {
+        padding: 40px;
+        -webkit-transform: translate3d(0, 100%, 0);
+        transform: translate3d(0, 100%, 0);
+        -webkit-transition: -webkit-transform 0.3s;
+        transition: transform 0.3s;
+        .bert-content {}
+        h5 {
+            display: block;
+            color: #fff;
+            margin: 0px 0px 5px;
+            font-size: 14px;
+        }
+        p {
+            font-size: 14px;
+            width: 100%;
+        }
+    }
+}
+
+.bert-alert.lined-bottom-left,
+.bert-alert.lined-bottom-right {
+    bottom: 15px;
+}
+
+.bert-alert.lined-top-left,
+.bert-alert.lined-bottom-left {
+    left: 15px;
+    right: auto;
+    width: calc( 100% - 30px);
+}
+
+.bert-alert.lined-top-right,
+.bert-alert.lined-bottom-right {
+    right: 15px;
+    left: auto;
+    width: calc( 100% - 30px);
 }
 
 .bert-alert[class*="growl-"] {
