--- a/stylesheets/bert.scss
+++ b/stylesheets/bert.scss
@@ -89,22 +89,22 @@ $transition: cubic-bezier( 0.500, -0, 0.275, 1.110);
 
 .bert-alert.success {
     background: $green;
-    border-color: lighten($green, 20%);
+    border-color: lighten($green, 10%);
 }
 
 .bert-alert.info {
     background: $blue;
-    border-color: lighten($blue, 20%);
+    border-color: lighten($blue, 10%);
 }
 
 .bert-alert.warning {
     background: $yellow;
-    border-color: lighten($yellow, 20%);
+    border-color: lighten($yellow, 10%);
 }
 
 .bert-alert.danger {
     background: $red;
-    border-color: lighten($red, 20%);
+    border-color: lighten($red, 10%);
 }
 
 .bert-alert.fixed-top,
@@ -134,16 +134,9 @@ $transition: cubic-bezier( 0.500, -0, 0.275, 1.110);
 }
 
 .bert-alert[class*="lined-"] {
-    z-index: 9999;
-    border-radius: 0;
     max-width: 350px;
     left: 50%;
-    bottom: 100%;
-    font-size: 20px;
-    line-height: 1.4;
-    text-align: center;
-    font-weight: 400;
-    color: #666666;
+    top:0;
     opacity: 0;
     cursor: default;
     pointer-events: none;
@@ -151,7 +144,6 @@ $transition: cubic-bezier( 0.500, -0, 0.275, 1.110);
     -webkit-transition: opacity 0.3s 0.3s;
     transition: opacity 0.3s 0.3s;
     overflow: hidden;
-    border-bottom: 10px solid;
     -webkit-transform: scale3d(0, 1, 1);
     transform: scale3d(0, 1, 1);
     -webkit-transition: -webkit-transform 0.3s 0.3s;
@@ -194,6 +186,13 @@ $transition: cubic-bezier( 0.500, -0, 0.275, 1.110);
 .bert-alert.lined-bottom-left,
 .bert-alert.lined-bottom-right {
     bottom: 15px;
+    border-bottom: 10px solid;
+}
+
+.bert-alert.lined-top-left,
+.bert-alert.lined-top-right {
+    top: 15px;
+    border-top: 10px solid;
 }
 
 .bert-alert.lined-top-left,
